restaurant list, restaurant card begin

--- a/client-lunch-uf/app.json
+++ b/client-lunch-uf/app.json
@@ -15,7 +15,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.hawaiidev.clientlunchuf"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +26,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ca47750e-5fc3-440f-8ece-3b91914863e3"
+      }
     }
   }
 }
