--- a/client-lunch-uf/package.json
+++ b/client-lunch-uf/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "expo": "~49.0.8",
+    "expo-dev-client": "~2.4.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4"
